--- a/frontend/styles/style.css
+++ b/frontend/styles/style.css
@@ -1,339 +1,6 @@
-body {
-    background-color: #fff;
-    color: black;
-    margin: 0 auto;
-    min-width: 1440px;
-    max-width: 2200px;
-    font-family: 'Geometria';
-}
-
-.container {
-    padding: 0 128px 0 128px;
-    background-image: url("../assets/house.png") ;
-    background-position: bottom right;
-    background-repeat: no-repeat ;
-    background-size: 57%;
-    position: relative;
-}
-
-.icon {
-    pointer-events: none;
-}
-
-.birds {
-    position: absolute;
-    margin-top: 247px;
-    transform: translateX(1650%);
-    display: block;
-}
-
-.head-site {
-    min-height: 821px;
-    background-color:aliceblue;
-    background-image: url("../assets/background.png"), url("../assets/house.png") ;
-    background-position: center, bottom right;
-    background-repeat: no-repeat, no-repeat ;
-    background-size: cover;
-}
-
-.head-contacts {
+.flex-block {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
-}
-
-.logo p {
-    font-weight: normal;
-    font-size: 12px;
-    margin: 0;
-}
-
-.mark-desc {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.mark {
-    padding: 15px 21px 17px 17px;
-    border-radius: 10px;
-    background-color: #fff;
-}
-
-.mark p, span {
-    margin: 0;
-}
-
-.mark p:last-child {
-    font-weight: normal;
-    font-size: 9px;
-    text-transform: uppercase;
-    margin: 8px 0 0 0;
-}
-
-.mark-desc p{
-    font-weight: bold;
-    font-size: 18px;
-    color: #090909;
-}
-
-#mark-5 {
-    font-weight: normal;
-    font-size: 12px;
-    color: #090909;
-}
-
-.mark-desc span:nth-child(4) {
-    font-weight: bold;
-    font-size: 10px;
-    color: #2e86aa;
-    text-transform: uppercase;
-}
-
-.socials {
-    padding: 13px 15px;
-    border-radius: 10px;
-    background-color: #fff;
-    
-}
-
-.socials p {
-    font-weight: normal;
-    font-size: 13px;
-    margin: 0;
-}
-
-.socials button {
-    font-weight: normal;
-    font-size: 11px;
-    color: #fff;
-    margin-top: 7px;
-    display: flex;
-    align-items: center;
-}
-
-.socials span {
-    margin-right: 6px;
-}
-
-.buttons {
-    display: flex;
-}
-
-#telegram {
-    padding: 7px 10px 8px;
-    border: none;
-    border-radius: 14.5px;
-    background-color: #28a3e4;
-    margin-right: 4px;
-    cursor: pointer;
-}
-
-#whatSapp {
-    padding: 7px 10px 8px;
-    border: none;
-    border-radius: 14.5px;
-    background-color: #2bd46a;
-    cursor: pointer;
-}
-
-.time p {
-    font-weight: normal;
-    font-size: 10px;
-    text-transform: uppercase;
-    margin: 4px;
-}
-
-.feedback i {
-    color: #2e86aa;
-    margin-right: 8px;
-}
-
-.feedback p {
-    margin: 8px;
-    display: flex;
-    align-items: center;
-}
-
-.feedback a {
-    text-decoration: none;
-    color: black;
-}
-
-.feedback p:first-child {
-    font-weight: normal;
-    font-size: 12px;
-    
-}
-
-.feedback p:nth-child(2), p:nth-child(3) {
-    font-weight: normal;
-    font-size: 17px;
-}
-
-.feedback p:nth-child(4) {
-    font-weight: bold;
-    font-size: 9px;
-    text-transform: uppercase;
-    color: #2e86aa;
-}
-
-.feedback span {
-    border-bottom: 1px dashed; 
-    cursor: pointer;
-}
-
-.feedback span:first-child {
-    margin-right: 14px;
-}
-
-.nav-shadow {
-    margin-top: 20px;
-    padding: 6px 8px 6px 8px;
-    border-radius: 10px;
-    box-shadow: 0 0 21px 0 rgba(131, 169, 184, 0.16);
-}
-
-nav {
-    padding: 11px 57px 11px 39px;
-    border-radius: 10px;
-    background-color: #fff;
-}
-
-nav ul {
-    padding: 0;
-    list-style: none;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-}
-
-nav li {
-    font-weight: bold;
-    font-size: 14px;
-    text-transform: uppercase;
-}
-
-nav a {
-    text-decoration: none;
-    color: #090909;
-}
-
-nav a:hover {
-    color: #2e86aa;
-}
-
-.head-question p {
-    margin-top: 35px;
-    margin-bottom: 15px;
-    text-align: left;
-    font-weight: 500;
-    font-size: 22px;
-}
-
-.head-desc p {
-    font-size: 52.5px;
-    font-weight: normal;
-    margin: 0;
-}
-
-.head-desc :nth-child(2) {
-    font-weight: bold;
-}
-
-.head-list {
-    margin-top: 51px;
-}
-
-.head-list ul {
-    list-style: none;
-}  
-
-.head-list ul > li{
-    padding-left: 20px;
-    position: relative;
-    margin-bottom: 31px;
-}
-
-.head-list ul > li:before{
-    content: '✔';
-    text-align: center;
-    display: block;
-    background-color: #fcf28e;
-    border-radius: 50%;
-    width: 29px;
-    line-height: 29px;
-    position: absolute; top: 5px; left: -30px;
-    color: black;
-}
-
-.head-list p {
-    font-size: 14px;
-    font-weight: normal;
-}
-
-.head-list span {
-    font-weight: bold;
-}
-
-.head-buttons {
-    margin-top: 50px;
-    padding-bottom: 70px;
-}
-
-.head-buttons button {
-    font-size: 13px;
-    font-weight: bold;
-    text-transform: uppercase;
-    cursor: pointer;
-}
-
-.button-shadow button:nth-child(1) {
-    position: absolute; 
-    margin-top: 4px;
-    display: block;
-    padding:34px 39px 32px 40px;
-    border-radius: 43px;
-    background-color: #d1b76c;
-    border: solid 2px #d1b76c;
-}
-
-
-.button-shadow button:nth-child(2) {
-    position: relative;
-    padding:34px 39px 32px 40px;
-    border-radius: 38.2px;
-    border: none;
-    box-shadow: 0 0 9px 0 rgba(218, 183, 104, 0.92);
-    border: solid 2px #efdc85;
-    background-color: #efdc85;
-}
-
-.button-shadow button:nth-child(2):hover {
-    border: solid 2px #dab792;
-    background-color: #dab792;
-}
-
-.button-consul {
-    position: relative;
-    margin-left: 14px;
-    padding: 34px 39px 32px 40px;
-    border-radius: 38.2px;
-    border: solid 2px #2e86aa;
-    background-color: transparent;
-}
-
-.button-span {
-    position: absolute;
-    margin-top: 14px;
-    transform: translateX(20%);
-    display: block;
-    background-color: #3ba5d1;
-    border-radius: 11.9px;
-    font-size: 12px;
-    font-weight: normal;
-    color: #fff;
-    padding: 10px 11px 10px 13px;
 }
