--- a/frontend/styles/all_styles.css
+++ b/frontend/styles/all_styles.css
@@ -3,4 +3,6 @@
 @import url(./head-site.css);
 @import url(./style.css);
 @import url(./tags.css);
+@import url(./test.css);
+@import url(./portfolio.css);
 @import url(./sprite/sprite.css);
