--- a/frontend/styles/tags.css
+++ b/frontend/styles/tags.css
@@ -8,6 +8,16 @@ body {
     font-weight: normal;
 }
 
+button {
+    appearance: none;
+    border: none;
+    background-color: transparent;
+    color: inherit;
+    font-family: inherit;
+    font-size: inherit;
+    cursor: pointer;
+  }
+
 img {
     max-width: 100%;
 }
