--- a/frontend/styles/test.css
+++ b/frontend/styles/test.css
@@ -1,12 +1,219 @@
 .test {
     margin: 25px 0 62px 0;
     min-height: 940px;
-    padding: 45px 38px 38px 39px;
+    padding: 45px 38px 0 39px;
     border-radius: 10px;
     background-color: #fff;
     box-shadow: 0 0 38px 0 rgba(0, 0, 0, 0.17);
 }
 
-.test h2 {
+.button {
+    font-size: 13px;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+.test-button1 {
+    position: absolute;
+    margin-top: 4px;
+    display: block;
+    padding: 23px 28px 24px 29px;
+    border-radius: 43px;
+    border: solid 2px #d1b76c;
+    background-color: #d1b76c;
+}
+
+.test-button2 {
+    position: relative;
+    padding: 23px 28px 24px 29px;
+    border-radius: 29px;
+    border: none;
+    box-shadow: 0 0 9px 0 rgba(218, 183, 104, 0.92);
+    border: solid 2px #efdc85;
+    background-color: #efdc85;
+}
+
+.button:hover {
+    border: solid 2px #dab792;
+    background-color: #dab792;
+}
+  
+  
+.calculation {
+    display: grid;
+    grid-template-columns: 1fr 280px;
+    grid-template-rows: 208px 598px 50px;
+    grid-gap: 15px;
+}
+
+.calculation-title {
     text-align: center;
 }
+
+.steps {
+    margin-top: 36px;
+    text-align: center;
+}
+
+.steps-number {
+    margin-top: 32px;
+    text-align: center;
+    font-size: 18px;
+}
+  
+  
+.calculation header {
+    grid-column-start: 1;
+    grid-column-end: 3;
+}
+  
+.calculation header .slide-indicator {
+    display: inline-block;
+    width: 91px;
+    height: 7px;
+    margin-right: 24px;
+    border-radius: 3px;
+    background: #d3d3d3;
+}
+.calculation header .slide-indicator:last-child {
+    margin-right: 0;
+}
+.calculation header .slide-indicator_active {
+    background: #39a0cb;
+}
+
+  
+.calculation main .slide {
+    display: none;
+}
+.calculation main .slide_active {
+    display: block;
+}
+  
+  
+.calculation aside {
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 2;
+    grid-row-end: 4;
+    background: #aaf;
+}
+  
+.calculation aside .slide-helper {
+    margin: 10px 0;
+    color: white;
+}
+
+
+.slide1-title {
+    margin: 26px 0 32px 0;
+}
+
+.slide1-img-space {
+    margin-right: 11px;
+}
+
+.slide1-firstLine-img {
+    margin-bottom: 74px;
+}
+
+.slide2-title {
+    margin: 27px 0 29px 0;
+}
+
+
+input[type="checkbox"] {
+    display: none;
+}
+
+.checkbox-block {
+    padding: 48px 358px 277px 57px;
+    border-radius: 10px;
+    border: solid 1px #afafaf;
+}
+
+/* для элемента input c type="checkbox" */
+.custom-checkbox {
+    position: absolute;
+    z-index: -1;
+    opacity: 0;
+  }
+
+  /* для элемента label, связанного с .custom-checkbox */
+  .custom-checkbox+label {
+    display: inline-flex;
+    align-items: center;
+    user-select: none;
+  }
+
+  /* создание в label псевдоэлемента before со следующими стилями */
+  .custom-checkbox+label::before {
+    content: '';
+    display: inline-block;
+    width: 1em;
+    height: 1em;
+    padding: 11px 9px 9px;
+    flex-shrink: 0;
+    flex-grow: 0;
+    border: 1px solid #adb5bd;
+    border-radius: 50%;
+    margin-right: 21px;
+    background-color: #cdcecf;
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3e%3c/svg%3e");
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: 50% 50%;
+  }
+
+  /* стили при наведении курсора на checkbox */
+  .custom-checkbox:not(:disabled):not(:checked)+label:hover::before {
+    border-color: #b3d7ff;
+  }
+
+  /* стили для чекбокса, находящегося в состоянии checked */
+  .custom-checkbox:checked+label::before {
+    border-color: #52ba5d;
+    background-color: #52ba5d;
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3e%3c/svg%3e");
+  }
+
+  .checkbox {
+    margin-bottom: 19px;
+  }
+
+  .slide3-content {
+    padding: 42px 48px 66px 44px;
+    border-radius: 10px;
+    border: solid 1px #afafaf;
+    text-align: start;
+  }
+
+  .attach-field {
+    margin: 28px 0 41px 0;
+    padding: 34px 254px 32px 228px;
+    border-radius: 10px;
+    background-color: #edf2f6;
+    text-align: center;
+  }
+
+  .attach-title {
+      margin-bottom: 15px;
+  }
+
+  .attach-place {
+      margin-top: 33px;
+      text-transform: uppercase;
+      color: #53bf5e;
+      font-size: 14px;
+  }
+
+  .attach-place span {
+    margin-right: 13px;
+    padding: 10px 10px 10px 10px;
+    border-radius: 50%;
+    color: #fff;
+    font-size: 18px;
+    background-color: #53bf5e;
+}
+ 
+    
