--- a/frontend/styles/sprite/sprite.css
+++ b/frontend/styles/sprite/sprite.css
@@ -28,6 +28,12 @@ To change `display` (e.g. `display: inline-block;`), we suggest using a common C
   width: 24px;
   height: 50px;
 }
+.icon-check {
+  background-image: url(sprite.png);
+  background-position: -224px -110px;
+  width: 11px;
+  height: 9px;
+}
 .icon-leaf {
   background-image: url(sprite.png);
   background-position: -99px 0px;
@@ -48,7 +54,7 @@ To change `display` (e.g. `display: inline-block;`), we suggest using a common C
 }
 .icon-man {
   background-image: url(sprite.png);
-  background-position: -202px -110px;
+  background-position: -202px -120px;
   width: 9px;
   height: 11px;
 }
@@ -60,19 +66,25 @@ To change `display` (e.g. `display: inline-block;`), we suggest using a common C
 }
 .icon-star {
   background-image: url(sprite.png);
-  background-position: -213px -94px;
+  background-position: -225px -94px;
   width: 10px;
   height: 10px;
 }
 .icon-telegram {
   background-image: url(sprite.png);
-  background-position: -221px -76px;
+  background-position: -213px -94px;
+  width: 12px;
+  height: 10px;
+}
+.icon-telegramBlue {
+  background-image: url(sprite.png);
+  background-position: -202px -110px;
   width: 12px;
   height: 10px;
 }
 .icon-telephone {
   background-image: url(sprite.png);
-  background-position: -223px -94px;
+  background-position: -214px -110px;
   width: 10px;
   height: 10px;
 }
@@ -94,9 +106,15 @@ To change `display` (e.g. `display: inline-block;`), we suggest using a common C
   width: 14px;
   height: 14px;
 }
-.icon-yandex {
+.icon-whatsappGreen {
   background-image: url(sprite.png);
   background-position: -221px -58px;
+  width: 14px;
+  height: 14px;
+}
+.icon-yandex {
+  background-image: url(sprite.png);
+  background-position: -221px -72px;
   width: 9px;
   height: 18px;
 }
